runfix: prevent sidebar header to overlap with button (#13889)
* runfix: prevent sidebar header to overlap with button

--- a/src/style/components/legal-hold-dot.less
+++ b/src/style/components/legal-hold-dot.less
@@ -24,6 +24,7 @@
   padding: 8px;
 
   cursor: default;
+  grid-column: 3 / span 2;
 
   &--interactive {
     cursor: pointer;
